--- a/BountyJS-StackUpDev-ShapeCalculator/index.html
+++ b/BountyJS-StackUpDev-ShapeCalculator/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Shape Area Calculator</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+    <h1>Shape Area Calculator</h1>
+    <div>
+        <label for="shape">Select a shape:</label>
+        <select id="shape">
+            <option value="">PICK HERE</option>
+            <option value="circle">Circle</option>
+            <option value="rectangle">Rectangle</option>
+            <option value="triangle">Triangle</option>
+        </select>
+    </div>
+    <div id="input-fields">
+        <!-- Input fields for different shapes will be added dynamically using JavaScript -->
+    </div>
+    <button id="calculate">Calculate Area</button>
+    <p id="result"></p>
 
+    <script src="index.js"></script>
+</body>
+</html>
